<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorAccent"
    android:layout_height="match_parent"
    tools:context=".Checkout">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="76dp"
        android:layout_height="75dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="11dp"
        android:contentDescription="@string/cutlery_icon"
        android:src="@drawable/ic_action_name" />

    <TextView
        android:id="@+id/headerTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/checkout_text"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/colorBlack"/>

    <TextView
        android:id="@+id/items"
        android:layout_width="132dp"
        android:layout_height="44dp"
        android:layout_alignEnd="@id/headerTextView3"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="117dp"
        android:text="@string/your_order"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tot_quantity"
        android:layout_width="132dp"
        android:layout_height="44dp"
        android:layout_alignEnd="@id/headerTextView3"
        android:layout_marginStart="120dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="-89dp"
        android:text="@string/qty"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:layout_marginStart="10dp"
        android:layout_marginTop="425dp"
        android:gravity="start|top"
        android:text="@string/payment_detail"
        android:textStyle="bold"
        android:textColor="@color/darkblue"
        android:inputType="textMultiLine"
        android:autofillHints="" />

    <TextView
        android:id="@+id/Total_message"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:layout_marginEnd="50dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:layout_alignEnd="@id/headerTextView3"
        android:text="@string/total_amount" />

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_border"
        android:layout_alignEnd="@id/imageView3"
        android:fontFamily="sans-serif"
        android:text="@string/confirm_button"
        android:textColor="@color/green"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="24sp"
        android:onClick="thankYou"
        />

    <TextView
        android:id="@+id/orders"
        android:hint="@string/items_message"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="180dp"
        android:layout_marginTop="150dp"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
         />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="93dp"
        android:layout_alignEnd="@id/confirmButton"
        android:layout_marginStart="250dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="17dp"
        android:hint="@string/quantity"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/displayPrice"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_alignEnd="@id/Total_message"
        android:layout_marginStart="40dp"
        android:layout_marginTop="450dp"
        android:layout_marginEnd="-161dp"
        android:hint="@string/display_total"
        android:textSize="18sp"
        android:textColor="@color/colorBlack"
        android:textStyle="bold|italic" />

</RelativeLayout>