<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorYellow"
    android:orientation="horizontal"
    tools:context=".MenuActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="76dp"
        android:layout_height="75dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="11dp"
        android:contentDescription="@string/cutlery_icon"
        android:src="@drawable/ic_action_name" />


    <TextView
        android:id="@+id/delivery_message"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/headerTextView2"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-100dp"
        android:layout_marginTop="85dp"
        android:fontFamily="casual"
        android:text="@string/deliver_fee"
        android:textColor="@color/green"
        android:textSize="22sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/headerTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/menu_text"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/colorBlack"/>

<!--PAD THAI -->

    <TextView
        android:id="@+id/pad_thai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/headerTextView2"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-100dp"
        android:layout_marginTop="150dp"
        android:text="@string/pad_thai_text"
        android:textColor="#0B0F32"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!--BURGER -->

    <Button
        android:id="@+id/pad_thai_button"
        android:layout_width="74dp"
        android:layout_height="24dp"
        android:layout_alignEnd="@id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="155dp"
        android:layout_marginEnd="121dp"
        android:background="@drawable/button_border"
        android:fontFamily="sans-serif"
        android:onClick="addToOrder"
        android:text="@string/pad_thai_add"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/burger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/headerTextView2"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-100dp"
        android:layout_marginTop="205dp"
        android:text="@string/burger_text"
        android:textColor="#0B0F32"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/burger_button"
        android:layout_width="74dp"
        android:layout_height="24dp"
        android:layout_alignEnd="@id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="210dp"
        android:layout_marginEnd="120dp"
        android:background="@drawable/button_border"
        android:fontFamily="sans-serif"
        android:text="@string/burger_add"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        android:onClick="addToOrder"/>

    <!--PIZZA -->

    <TextView
        android:id="@+id/pizza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/headerTextView2"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-100dp"
        android:layout_marginTop="260dp"
        android:text="@string/pizza_text"
        android:textColor="#0B0F32"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/pizza_button"
        android:layout_width="74dp"
        android:layout_height="24dp"
        android:layout_alignEnd="@id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="265dp"
        android:layout_marginEnd="120dp"
        android:background="@drawable/button_border"
        android:fontFamily="sans-serif"
        android:text="@string/pizza_add"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        android:onClick="addToOrder"/>


    <!--FRIES -->

    <TextView
        android:id="@+id/fries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/headerTextView2"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-100dp"
        android:layout_marginTop="315dp"
        android:text="@string/fries_text"
        android:textColor="#0B0F32"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/fries_button"
        android:layout_width="74dp"
        android:layout_height="24dp"
        android:layout_alignEnd="@id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="120dp"
        android:background="@drawable/button_border"
        android:fontFamily="sans-serif"
        android:text="@string/fries_add"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        android:onClick="addToOrder"/>

    <!--SODA -->

    <TextView
        android:id="@+id/soda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/headerTextView2"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-100dp"
        android:layout_marginTop="370dp"
        android:text="@string/soda_text"
        android:textColor="#0B0F32"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/soda_button"
        android:layout_width="74dp"
        android:layout_height="24dp"
        android:layout_alignEnd="@id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="375dp"
        android:layout_marginEnd="120dp"
        android:background="@drawable/button_border"
        android:fontFamily="sans-serif"
        android:text="@string/soda_add"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        android:onClick="addToOrder"/>


    <TextView
        android:id="@+id/error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/headerTextView2"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-100dp"
        android:layout_marginTop="425dp"
        android:text="@string/empty_cart"
        android:textColor="@color/colorRed"
        android:textSize="26sp"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold|italic"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/orderButton"
        android:layout_width="122dp"
        android:layout_height="36dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_border"
        android:layout_alignEnd="@id/imageView2"
        android:fontFamily="sans-serif"
        android:text="@string/order_button"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:textSize="24sp"
        android:onClick="placeOrder"/>

    <Button
        android:id="@+id/resetButton"
        android:layout_width="122dp"
        android:layout_height="36dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="220dp"
        android:background="@drawable/button_border"
        android:layout_alignEnd="@id/imageView2"
        android:fontFamily="sans-serif"
        android:text="@string/reset_button"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:textSize="24sp"
      />

    <TextView
        android:id="@+id/pad_thai_quantity"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/orderButton"
        android:layout_marginStart="250dp"
        android:layout_marginTop="155dp"
        android:layout_marginEnd="-25dp"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/burger_quantity"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/orderButton"
        android:layout_marginStart="250dp"
        android:layout_marginTop="210dp"
        android:layout_marginEnd="-25dp"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/pizza_quantity"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/orderButton"
        android:layout_marginStart="250dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="-25dp"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/fries_quantity"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/orderButton"
        android:layout_marginStart="250dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="-25dp"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/soda_quantity"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/orderButton"
        android:layout_marginStart="250dp"
        android:layout_marginTop="375dp"
        android:layout_marginEnd="-25dp"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible"/>

</RelativeLayout>